<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:paddingTop="15dip"
    android:padding="10dip"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/login_instruction"
    android:textColor="#ffffff"
    android:gravity="center_horizontal"
    android:layout_marginBottom="15dip"
    />
 <EditText
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
 	android:id="@+id/login_email_box"
 	android:textColor="#000"
 	android:hint="@string/email_hint"
 	android:minWidth="250dip"
 />
 <EditText
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
 	android:id="@+id/login_password_box"
 	android:textColor="#000"
 	android:hint="@string/password_hint"
 	android:password="true"
 	android:minWidth="250dip"
 />
 
 <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal"    
    android:paddingTop="15dip"
    android:padding="10dip"
  >
 <Button
 	android:id="@+id/sync_button"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:textStyle="bold"
 	android:textColor="#000"
 	android:text="@string/loginscreen_sync_button_label"
 	android:minWidth="110dip"
 	android:layout_gravity="center_horizontal"
 />
 <Button
 	android:id="@+id/sync_cancel_button"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:textStyle="bold"
 	android:textColor="#000"
 	android:text="@string/loginscreen_cancel_button_label"
 	android:minWidth="110dip"
 	android:layout_gravity="center_horizontal"
 />
    </LinearLayout>
 
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/register_instruction"
    android:textColor="#ffffff"
    android:gravity="center_horizontal"
    android:layout_marginTop="15dip"
    android:layout_marginBottom="15dip"
/>

<Button
 	android:id="@+id/accountsignup_button"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:textStyle="bold"
 	android:textColor="#000"
 	android:text="@string/signup_button_label"
 	android:minWidth="80dip"
 	android:layout_gravity="center_horizontal"
 />
 
 <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/scheduleraccount_info"
    android:textColor="#ffffff"
    android:gravity="center_horizontal"
    android:layout_marginTop="20dip"
/> 
 
</LinearLayout>
</ScrollView>